Basic configuration built

--- a/senlin_website/senlin/templates/senlin/base.html
+++ b/senlin_website/senlin/templates/senlin/base.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="{% static 'img/icon.ico' %}"/>
 </head>
 <body>
-<h1>base</h1>
+<h1>this is base template.</h1>
     {% block body %}
     {% endblock %}
 </body>
