--- a/senlin_website/senlin/templates/senlin/home.html
+++ b/senlin_website/senlin/templates/senlin/home.html
@@ -2,7 +2,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block body %}
-     <h1>welcome to homepage</h1>
+     <!--<h1>welcome to homepage</h1>-->
      <div id="App1"></div>
      {% render_bundle 'vendors' %}
      {% render_bundle 'App1' %}
