--- a/senlin_website/senlin/templates/senlin/base.html
+++ b/senlin_website/senlin/templates/senlin/base.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../static/css/bootstrap.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="../../static/css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
