--- a/senlin_website/senlin/templates/senlin/home.html
+++ b/senlin_website/senlin/templates/senlin/home.html
@@ -3,8 +3,8 @@
 
 {% block body %}
      <!--<h1>welcome to homepage</h1>-->
-     <div id="App1"></div>
+     <div id="Senlin"></div>
      {% render_bundle 'vendors' %}
-     {% render_bundle 'App1' %}
+     {% render_bundle 'Senlin' %}
 
 {% endblock %}
