--- a/senlin_website/senlin/templates/senlin/base.html
+++ b/senlin_website/senlin/templates/senlin/base.html
@@ -7,7 +7,7 @@
     <title>Welcome to Senlin</title>
     {% load staticfiles %}
     <!-- Load website icon -->
-    <link rel="icon" href="{% static 'img/icon.ico' %}"/>
+    <link rel="icon" href="{% static 'img/senlinlogo.png' %}"/>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
