--- a/senlin_website/senlin/templates/senlin/home.html
+++ b/senlin_website/senlin/templates/senlin/home.html
@@ -5,8 +5,38 @@
      <!--<h1>welcome to homepage</h1>-->
 
 
+
      <div id="Senlin"></div>
      {% render_bundle 'vendors' %}
      {% render_bundle 'Senlin' %}
 
+     <script type="text/javascript">
+
+
+          window.onload=function()
+            {
+//                saveStatusLocally()
+               console.log(readStatus())
+                whatIsYourCurrentStatus()
+
+            }
+          // save the string
+          function saveStatusLocally() {
+            window.localStorage.setItem("status", 'Random notes');
+          }
+          // read the string
+          function readStatus() {
+             return window.localStorage.getItem("status");
+          }
+
+          function whatIsYourCurrentStatus() {
+            if (navigator.onLine) {
+              console.log('Online!')
+            } else {
+              console.log('Offline!')
+            }
+          }
+
+
+     </script>
 {% endblock %}
