--- a/senlin_website/senlin/templates/senlin/base.html
+++ b/senlin_website/senlin/templates/senlin/base.html
@@ -17,6 +17,8 @@
     <!-- Your custom styles (optional) -->
     <link href="../../static/css/style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <!--<script src="{% static 'js/jquery.cookie.js' %}"/>-->
+
     <!--<script src="../../node_modules/localforage/src/localforage.js"></script>-->
 
 </head>
