--- a/senlin_website/senlin/templates/senlin/base.html
+++ b/senlin_website/senlin/templates/senlin/base.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="{% static 'img/senlinlogo.png' %}"/>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <!-- Bootstrap core CSS -->
     <link href="../../static/css/bootstrap.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
@@ -17,9 +19,11 @@
     <!-- Your custom styles (optional) -->
     <link href="../../static/css/style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--<script src="{% static 'js/jquery.cookie.js' %}"/>-->
 
     <!--<script src="../../node_modules/localforage/src/localforage.js"></script>-->
+    <style type="text/css"> html,body{height: 100%}</style>
 
 </head>
 <body>
