--- a/senlin_website/senlin/templates/senlin/base.html
+++ b/senlin_website/senlin/templates/senlin/base.html
@@ -18,6 +18,8 @@
     <link href="../../static/css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="../../static/css/style.css" rel="stylesheet">
+    <link href="../../static/css/buttons.css" rel="stylesheet">
+    <script type="text/javascript" src="../../static/js/buttons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--<script src="{% static 'js/jquery.cookie.js' %}"/>-->
