unified theme and daily email notification of review schedule

--- a/senlin_website/senlin/templates/senlin/login.html
+++ b/senlin_website/senlin/templates/senlin/login.html
@@ -26,7 +26,7 @@
       
       <div class="tab-content">
         <div id="signup">   
-          <h1>Sign Up to Senlin</h1>
+          <h1 style="font-size: 2rem;font-weight: 600;text-transform: uppercase;letter-spacing: .1em;">Sign Up to Senlin</h1>
           
           <form action="" method="post" id="sign_up_form" name="sign_up_form">
               {% csrf_token %}
@@ -74,7 +74,7 @@
         </div>
         
         <div id="login">   
-          <h1>Welcome Back!</h1>
+          <h1 style="font-size: 2rem;font-weight: 600;text-transform: uppercase;letter-spacing: .1em;">Welcome Back!</h1>
           
           <form action="" method="post" id="login_form" name="login_form">
           {% csrf_token %}
