--- a/senlin_website/senlin/templates/senlin/message.html
+++ b/senlin_website/senlin/templates/senlin/message.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="form">
-        <h1><li class="glyphicon glyphicon-info-sign"></li><span>  {{ message }}</span></h1>
+        <h1><li  style="background: #198027"  class="glyphicon glyphicon-info-sign"></li><span>  {{ message }}</span></h1>
         <p class="forgot"><a href="{% url 'senlin:register' %}"><span class="glyphicon glyphicon-repeat"></span>  Go Back to Login</a></p>
     </div>
 
