--- a/senlin_website/senlin/static/css/login.css
+++ b/senlin_website/senlin/static/css/login.css
@@ -7,13 +7,13 @@ html {
 }
 
 body {
-  background: #c1bdba;
+  background: #ebe3e0;
   font-family: 'Titillium Web', sans-serif;
 }
 
 a {
   text-decoration: none;
-  color: #1ab188;
+  color: #198027;
   -webkit-transition: .5s ease;
   transition: .5s ease;
 }
@@ -22,7 +22,7 @@ a:hover {
 }
 
 .form {
-  background: #1C2331 ;
+  background: #FF8800 ;
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
@@ -44,9 +44,14 @@ a:hover {
   display: block;
   text-decoration: none;
   padding: 15px;
-  background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
-  font-size: 20px;
+  background: #ddd4bc;
+  color: #198027;
+  /*font-size: 20px;*/
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+
   float: left;
   width: 50%;
   text-align: center;
@@ -60,7 +65,7 @@ a:hover {
   color: #ffffff;
 }
 .tab-group .active a {
-  background: #FF8800;
+  background: #198027;
   color: #ffffff;
 }
 
@@ -80,12 +85,13 @@ label {
   -webkit-transform: translateY(6px);
           transform: translateY(6px);
   left: 13px;
-  color: rgba(255, 255, 255, 0.5);
+  color: #ddd4bc;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
   -webkit-backface-visibility: hidden;
   pointer-events: none;
   font-size: 22px;
+
 }
 label .req {
   margin: 2px;
@@ -160,7 +166,7 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #FF8800;
+  background: #198027;
   color: #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
@@ -168,7 +174,7 @@ textarea {
     border-radius: 30px;
 }
 .button:hover, .button:focus {
-  background: #4682b4;
+  background: #ffbb33;
 }
 
 .button-block {
