--- a/senlin_website/senlin/templates/senlin/home.html
+++ b/senlin_website/senlin/templates/senlin/home.html
@@ -8,7 +8,9 @@
 
           var user_name = '{{ user.username}}'
           var numOfWords = '{{ numOfWords }}'
-          console.log('======',numOfWords)
+          var numOfLearned = '{{ numOfLearned }}'
+          var totalNumOfWords = '{{totalNumOfWords}}'
+          var numOfReview = '{{numOfReview}}'
 
           window.onload=function()
             {
